--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <script src="js/common/rot.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/screens.js"></script>
   </body>
 </html>
