--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <title>Cthulhu Roguelike</title>
   </head>
   <body>
-    <script src="js/common/rot.js"></script>
+    <script src="js/common/rot.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/screens.js"></script>
+    <script src="js/glyph.js"></script>
+    <script src="js/tile.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/entity.js"></script>
+    <script src="js/entities.js"></script>
   </body>
 </html>
