fungus growth and attacking

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cthulhu Roguelike</title>
   </head>
   <body>
-    <script src="js/common/rot.min.js"></script>
+    <script src="js/lib/rot.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/screens.js"></script>
     <script src="js/glyph.js"></script>
