combat and messaging

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <script src="js/lib/rot.min.js"></script>
+    <script src="js/lib/sprintf.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/screens.js"></script>
     <script src="js/glyph.js"></script>
