--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/glyph.js"></script>
     <script src="js/tile.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/builder.js"></script>
     <script src="js/entity.js"></script>
     <script src="js/entities.js"></script>
   </body>
