items and repositories

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
   <head>
     <title>Cthulhu Roguelike</title>
   </head>
-  <body>
+  <body>        
     <script src="js/lib/rot.min.js"></script>
     <script src="js/lib/sprintf.min.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/screens.js"></script>
-    <script src="js/glyph.js"></script>
-    <script src="js/tile.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/builder.js"></script>
-    <script src="js/entity.js"></script>
-    <script src="js/entities.js"></script>
+    
+	<script src="js/game.js"></script>
+	<script src="js/screens.js"></script>
+	<script src="js/glyph.js"></script>
+	<script src="js/tile.js"></script>
+	<script src="js/builder.js"></script>
+	<script src="js/map.js"></script>
+	<script src="js/entity.js"></script>
+	<script src="js/item.js"></script>
+	<script src="js/repository.js"></script>
+	<script src="js/entities.js"></script>
+	<script src="js/items.js"></script>
   </body>
 </html>
