added eating and hunger

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 	<script src="js/game.js"></script>
 	<script src="js/screens.js"></script>
 	<script src="js/glyph.js"></script>
+	<script src="js/dynamicglyph.js"></script>
 	<script src="js/tile.js"></script>
 	<script src="js/builder.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/entity.js"></script>
+	<script src="js/entitymixins.js"></script>
 	<script src="js/item.js"></script>
+	<script src="js/itemmixins.js"></script>
 	<script src="js/repository.js"></script>
 	<script src="js/entities.js"></script>
 	<script src="js/items.js"></script>
