end boss + cleanups

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <title>Cthulhu Roguelike</title>
   </head>
   <body>        
+    <!-- core libraries -->
     <script src="js/lib/rot.min.js"></script>
     <script src="js/lib/sprintf.min.js"></script>
-    
+    <!-- game classes -->
 	<script src="js/game.js"></script>
+	<script src="js/utilities.js"></script>
 	<script src="js/screens.js"></script>
 	<script src="js/glyph.js"></script>
 	<script src="js/dynamicglyph.js"></script>
@@ -21,5 +23,8 @@
 	<script src="js/repository.js"></script>
 	<script src="js/entities.js"></script>
 	<script src="js/items.js"></script>
+	<!-- maps -->
+	<script src="js/maps/cave.js"></script>
+	<script src="js/maps/bosscavern.js"></script>
   </body>
 </html>
