dynamic sized viewports with resize

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Cthulhu Roguelike</title>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=UnifrakturCook:700' rel='stylesheet' type='text/css'>
+    <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>        
     <!-- core libraries -->
@@ -28,5 +29,7 @@
 	<!-- maps -->
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
+	<div id="story">Lorem Ipsum</div>
+	<div id="RotDisplay"></div>
   </body>
 </html>
