handoff to desktop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 	<!-- maps -->
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
-	<div id="story">Lorem Ipsum</div>
+	<div class="top-interface">
+		<div id="story">Lorem Ipsum</div>
+	</div>
 	<div id="RotDisplay"></div>
   </body>
 </html>
