Cthulhu inspired monsters added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
   <head>
     <title>Cthulhu Roguelike</title>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=UnifrakturCook:700' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>        
@@ -30,7 +28,47 @@
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
 	<div class="top-interface">
-		<div id="story">Lorem Ipsum</div>
+		<div id="logo">Cthulhu Rot - An Introduction</div>
+		<div id="poem">
+			<ul>
+				<li>Along the shore the cloud waves break,</li>
+   				<li>The twin suns sink behind the lake,</li>
+    			<li>The shadows lengthen...</li>
+				<li>In Carcosa.</li>
+			</ul>
+			<ul>
+				<li>Strange is the night where black stars rise,</li>
+	    		<li>And strange moons circle through the skies,</li>
+	    		<li>But stranger still is...</li>
+				<li>Lost Carcosa.</li>
+			</ul>
+			<ul>
+				<li>Songs that the Hyades shall sing,</li>
+	    		<li>Where flap the tatters of the King,</li>
+	    		<li>Must die unheard in...</li>
+				<li>Dim Carcosa.</li>
+			</ul>
+			<ul>
+				<li>Song of my soul, my voice is dead,</li>
+	   			<li>Die thou, unsung, as tears unshed</li>
+	    		<li>Shall dry and die in...</li>
+				<li>Lost Carcosa.</li>
+			</ul>
+			<ul>
+				<li>I go back home in my song,</li>
+	   			<li>I miss you, but you are gone,</li>
+	    		<li>Afraid and alone...</li>
+				<li>Dark Carcosa.</li>
+			</ul>
+			<ul>
+				<li>Feverish from poisonous death,</li>
+	   			<li>Creatures writhing their last breaths,</li>
+	    		<li>I stalk the shadows...</li>
+				<li>My Carcosa.</li>
+			</ul>
+			<p id='bib'>- Cassilda's Song (expanded edition) in <i>The King in Yellow</i> Act 1, Scenes 2 & 3</p>
+			<p id='chant'>Iä! Iä! Shub-Niggurath! The Black Goat of the Woods with a Thousand Young!</p>
+		</div>
 	</div>
 	<div id="RotDisplay"></div>
   </body>
