media queries for mobile

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>        
-    <!-- core libraries -->
     <script src="js/lib/rot.min.js"></script>
     <script src="js/lib/sprintf.min.js"></script>
-    <!-- game classes -->
 	<script src="js/game.js"></script>
 	<script src="js/utilities.js"></script>
 	<script src="js/screens.js"></script>
@@ -24,10 +22,9 @@
 	<script src="js/repository.js"></script>
 	<script src="js/entities.js"></script>
 	<script src="js/items.js"></script>
-	<!-- maps -->
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
-	<div class="top-interface">
+	<div class="interface">
 		<div id="logo">Cthulhu Rot - An Introduction</div>
 		<div id="poem">
 			<ul>
