added sexy gradients

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
 	<div class="interface">
+		<div id="hud">
+			<div id="story"></div>
+			<div id="task"></div>
+			<div id="stats"></div>
+			<div id="key"></div>
+			<div id="status"></div>
+		</div>
 		<div id="logo">Cthulhu Rot - An Introduction</div>
 		<div id="poem">
 			<ul>
