buffer areas around map edges

--- a/index.html
+++ b/index.html
@@ -26,11 +26,42 @@
 	<script src="js/maps/bosscavern.js"></script>
 	<div class="interface">
 		<div id="hud">
-			<div id="story"></div>
-			<div id="task"></div>
-			<div id="stats"></div>
-			<div id="key"></div>
-			<div id="status"></div>
+			<div id="story">
+				==== STORY ====</br>
+				Shipwrecked on a lonely beach.  You are wet, hungry and cold.  Build a fire to survive.
+			</div>
+			<div id="task">
+				==== TASKS ====</br>
+				Collect Firewood (10)
+			</div>
+			<div id="stats">
+				==== STATS ====</br>
+				@: Player 'CheTrooper'</br>
+				Barbarian Level 20</br>
+				Health: 40/400</br>
+				Experience: 999/999999</br>
+				Nutrition: Very Hungry</br>
+				Sanity: Wavering</br>
+				[ PRESS 'S' FOR MORE ]</br>
+				Str: 18  Int: 12 Dex:8</br>
+				Att: 8  Def: 14</br>
+			</div>
+			<div id="key">
+				==== KEY ====</br>
+				C: Cultist</br>
+				Health: 26/40</br>
+				(HUNTING)</br>
+				</br>
+				D: Deep One</br>
+				Health: 180/240</br>
+				Immune to fire</br>
+				(WANDERING)</br>
+			</div>
+			<div id="status">
+				==== STATUS ====</br>
+				Location: Caves</br>
+				Depth: 4
+			</div>
 		</div>
 		<div id="logo">Cthulhu Rot - An Introduction</div>
 		<div id="poem">
@@ -71,7 +102,7 @@
 				<li>My Carcosa.</li>
 			</ul>
 			<p id='bib'>- Cassilda's Song (expanded edition) in <i>The King in Yellow</i> Act 1, Scenes 2 & 3</p>
-			<p id='chant'>Iä! Iä! Shub-Niggurath! The Black Goat of the Woods with a Thousand Young!</p>
+			<p id='chant'>Iï¿½! Iï¿½! Shub-Niggurath! The Black Goat of the Woods with a Thousand Young!</p>
 		</div>
 	</div>
 	<div id="RotDisplay"></div>
