better stats working defense/attack value w/items

--- a/index.html
+++ b/index.html
@@ -22,46 +22,24 @@
 	<script src="js/repository.js"></script>
 	<script src="js/entities.js"></script>
 	<script src="js/items.js"></script>
+	<script src="js/interface.js"></script>
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
 	<div class="interface">
 		<div id="hud">
 			<div id="story">
-				==== STORY ====</br>
-				Shipwrecked on a lonely beach.  You are wet, hungry and cold.  Build a fire to survive.
+				==== STORY ====
 			</div>
-			<div id="task">
-				==== TASKS ====</br>
-				Collect Firewood (10)
+			<div id="tasks">
+				==== TASKS ====
 			</div>
 			<div id="stats">
-				==== STATS ====</br>
-				@: Player 'CheTrooper'</br>
-				Barbarian Level 20</br>
-				Health: 40/400</br>
-				Experience: 999/999999</br>
-				Nutrition: Very Hungry</br>
-				Sanity: Wavering</br>
-				[ PRESS 'S' FOR MORE ]</br>
-				Str: 18  Int: 12 Dex:8</br>
-				Att: 8  Def: 14</br>
+				==== STATS ====
 			</div>
 			<div id="key">
-				==== KEY ====</br>
-				C: Cultist</br>
-				Health: 26/40</br>
-				(HUNTING)</br>
-				</br>
-				D: Deep One</br>
-				Health: 180/240</br>
-				Immune to fire</br>
-				(WANDERING)</br>
+				==== KEY ====
 			</div>
-			<div id="status">
-				==== STATUS ====</br>
-				Location: Caves</br>
-				Depth: 4
-			</div>
+			<div id="status"></div>
 		</div>
 		<div id="logo">Cthulhu Rot - An Introduction</div>
 		<div id="poem">
