we haz item key!

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 			<div id="stats">
 				==== STATS ====
 			</div>
-			<div id="key">
-				==== KEY ====
-			</div>
+			<div id="key"></div>
 			<div id="status"></div>
 		</div>
 		
