ending graphic (ascii)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<script src="js/interface.js"></script>
 	<script src="js/maps/cave.js"></script>
 	<script src="js/maps/bosscavern.js"></script>
+	<script src="js/moon.js"></script>
 	<!-- <div id="logo">Cthulhu Rot - An Introduction</div> -->
 	<div class="interface">
 		<div id="hud">
