much better stats in interface

--- a/index.html
+++ b/index.html
@@ -30,17 +30,11 @@
 	<!-- <div id="logo">Cthulhu Rot - An Introduction</div> -->
 	<div class="interface">
 		<div id="hud">
-			<div id="story">
-				==== STORY ====
-			</div>
-			<div id="tasks">
-				==== TASKS ====
-			</div>
-			<div id="stats">
-				==== STATS ====
-			</div>
-			<div id="key"></div>
+			<div id="stats"></div>
 			<div id="status"></div>
+			<div id="key"></div>
+			<div id="story"></div>
+			<div id="tasks"></div>
 		</div>
 		
 	</div>
