help system in place

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href='css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>        
-    <!-- <script src="js/lib/rot.min.js"></script> -->        
-    <script src="js/lib/rot.js"></script>
+    <script src="js/lib/rot.min.js"></script>        
+    <!-- <script src="js/lib/rot.js"></script> -->
     <script src="js/lib/sprintf.min.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/utilities.js"></script>
+	<script src="js/narrator.js"></script>
 	<script src="js/screens.js"></script>
 	<script src="js/glyph.js"></script>
 	<script src="js/dynamicglyph.js"></script>
